--- a/influxdb/package.json
+++ b/influxdb/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@influxdata/influxdb-client": "1.33.1",
+    "@influxdata/influxdb-client-browser": "1.33.1",
+    "firebase": "9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
