Do not output to stdout anymore so that Docker log is not polluted

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -17,11 +17,11 @@
   [[inputs.http.json_v2]]
     measurement_name = "observation"
     timestamp_path = "utctime" # A string with valid GJSON path syntax to a valid timestamp (single value)
-    timestamp_format = "unix" # A string with a valid timestamp format (see below for possible values)
+    timestamp_format = "unix"
 
     [[inputs.http.json_v2.field]]
       path = "bar"
-      # A string specifying the type (int,uint,float,string,bool) 
+      # int,uint,float,string,bool
       type = "float"
     [[inputs.http.json_v2.field]]
       path = "dew"
@@ -97,5 +97,5 @@
   organization = "$DOCKER_INFLUXDB_INIT_ORG"
   bucket = "$DOCKER_INFLUXDB_INIT_BUCKET"
 
-[[outputs.file]]
-  files = ["stdout"]
+# [[outputs.file]]
+#   files = ["stdout"]
