--- a/telegraf.conf
+++ b/telegraf.conf
@@ -65,6 +65,46 @@
       path = "windspd"
       type = "float"
     [[inputs.http.json_v2.field]]
+      rename = "windAverage2"
+      path = "windavg2"
+      type = "float"
+    [[inputs.http.json_v2.field]]
+      rename = "windAverage10"
+      path = "windavg10"
+      type = "float"
+    [[inputs.http.json_v2.field]]
+      rename = "rainr"
+      path = "rainr"
+      type = "float"
+    [[inputs.http.json_v2.field]]
+      rename = "rain15"
+      path = "rain15"
+      type = "float"
+    [[inputs.http.json_v2.field]]
+      rename = "rain1h"
+      path = "rain1h"
+      type = "float"
+    [[inputs.http.json_v2.field]]
+      rename = "raind"
+      path = "raind"
+      type = "float"
+    [[inputs.http.json_v2.field]]
+      rename = "rain24"
+      path = "rain24"
+      type = "float"
+    [[inputs.http.json_v2.field]]
+      rename = "rainmon"
+      path = "rainmon"
+      type = "float"
+    [[inputs.http.json_v2.field]]
+      rename = "rainyear"
+      path = "rainyear"
+      type = "float"
+    [[inputs.http.json_v2.field]]
+      rename = "storm"
+      path = "storm"
+      type = "float"
+    [[inputs.http.json_v2.field]]
       path = "uptime"
       type = "int"
 
