--- a/influxdb.env
+++ b/influxdb.env
@@ -4,3 +4,5 @@ DOCKER_INFLUXDB_INIT_PASSWORD=Esgff3uxXPMB3X
 DOCKER_INFLUXDB_INIT_ORG=Home
 DOCKER_INFLUXDB_INIT_BUCKET=weather
 DOCKER_INFLUXDB_INIT_ADMIN_TOKEN="FbYesKdKDn9VHelD4aQw9o7rrnxtKeC8jDiOrn9sF1i23Ucnm9JREd-YPvkH94N7DnHz1M6gNXS4nA1VN0qorA=="
+INFLUXD_TLS_CERT=/etc/ssl/cert.pem
+INFLUXD_TLS_KEY=/etc/ssl/privkey.pem
