--- a/telegraf.conf
+++ b/telegraf.conf
@@ -132,10 +132,11 @@
       rename = "longitude"
 
 [[outputs.influxdb_v2]]
-  urls = ["http://influxdb:8086"]
+  urls = ["https://influxdb:8086"]
   token = "$DOCKER_INFLUXDB_INIT_ADMIN_TOKEN"
   organization = "$DOCKER_INFLUXDB_INIT_ORG"
   bucket = "$DOCKER_INFLUXDB_INIT_BUCKET"
+  insecure_skip_verify = true
 
 # [[outputs.file]]
 #   files = ["stdout"]
