Connect with absolute URL
When we connect to the other container directly, the certificate is not accepted and therefore the connection fails

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -132,7 +132,7 @@
       rename = "longitude"
 
 [[outputs.influxdb_v2]]
-  urls = ["https://influxdb:8086"]
+  urls = ["https://home.frankvanwijk.nl:8086"] # prefer ["https://influxdb:8086"] but doesn't work with the provided certificate
   token = "$DOCKER_INFLUXDB_INIT_ADMIN_TOKEN"
   organization = "$DOCKER_INFLUXDB_INIT_ORG"
   bucket = "$DOCKER_INFLUXDB_INIT_BUCKET"
